# labman

./: .gitignore  Cargo.toml  agents.md  architecture.md  protocol.md  readme.md  roadmap.md
crates/labman-client/: Cargo.toml
crates/labman-config/: Cargo.toml
crates/labman-config/src/: lib.rs
crates/labman-core/: Cargo.toml  readme.md
crates/labman-core/src/: endpoint.rs  error.rs  lib.rs  node.rs  slug.rs
crates/labman-endpoints/: Cargo.toml
crates/labman-endpoints/src/: lib.rs
crates/labman-proxy/: Cargo.toml
crates/labman-proxy/src/: lib.rs
crates/labman-server/: Cargo.toml
crates/labman-server/src/: lib.rs
crates/labman-telemetry/: Cargo.toml
crates/labman-telemetry/src/: lib.rs
crates/labman-wireguard/: Cargo.toml
crates/labman-wireguard/src/: lib.rs
crates/labman-ws-portman/: Cargo.toml
crates/labman-ws-portman/src/: lib.rs
