[workspace]
resolver = "3"
members = ["bin/labman-cli",
    "bin/labman-daemon",
    "crates/labman-client",
    "crates/labman-config",
    "crates/labman-core",
    "crates/labman-endpoints",
    "crates/labman-proxy",
    "crates/labman-telemetry",
    "crates/labman-wireguard"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["qapish engineering <eng@qapish.ai>"]
repository = "https://github.com/qapish/labman"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
url = "2"
