[package]
name = "labman-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
labman-core = { path = "../labman-core" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
[features]
default = []
