[package]
name = "labman-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono = { version = "0.4", features = ["serde"] }
