[package]
name = "labman-endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
labman-core = { path = "../labman-core" }
labman-config = { path = "../labman-config" }
labman-telemetry = { path = "../labman-telemetry" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"] }
