[package]
name = "labman-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
prometheus = []

[dependencies]
labman-core = { path = "../labman-core" }
labman-config = { path = "../labman-config" }
labman-telemetry = { path = "../labman-telemetry", features = ["prometheus"] }

tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
axum = { workspace = true }
tracing = { workspace = true }

# For parsing socket addresses from configuration, etc.
# (pulled in transitively by hyper/axum in many setups, but we depend explicitly
# to make intent clear and simplify future HTTP/URL handling).
http = "1.0"

[dev-dependencies]
tower = { workspace = true }
